In admin panel, made changes to signup activity and created a new activity to take user information as input

--- a/adminpanel/src/main/res/layout/activity_signup.xml
+++ b/adminpanel/src/main/res/layout/activity_signup.xml
@@ -9,173 +9,107 @@
 
     <ImageView
         android:id="@+id/signupActivityAppLogo"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="30dp"
         android:contentDescription="@string/app_logo"
+        android:src="@drawable/app_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/app_logo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/signupActivityAppName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="@font/yeonsung_regular"
         android:text="@string/application_name"
+        android:textAllCaps="false"
         android:textColor="@color/accent_color"
         android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="@id/signupActivityAppLogo"
-        app:layout_constraintStart_toStartOf="@id/signupActivityAppLogo"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityAppLogo" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signupActivityAppLogo" />
 
     <TextView
-        android:id="@+id/signupActivitySignupText"
+        android:id="@+id/signupActivityAppLoginTitleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/yatraone_regular"
-        android:text="Sign Up Here For Your\nAdmin DashBoard"
         android:gravity="center"
+        android:text="Sign Up For Admin Panel"
         android:textColor="@color/accent_color"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/signupActivityAppLogo"
-        app:layout_constraintStart_toStartOf="@+id/signupActivityAppLogo"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupActivityAppName" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/signupActivityLocationView"
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-        android:layout_width="0dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/custom_button_white"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
-        app:endIconDrawable="@drawable/down_arrow"
-        app:endIconTint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivitySignupText">
-
-        <AutoCompleteTextView
-            android:id="@+id/signupActivityLocationList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/lato_bold"
-            android:gravity="top"
-            android:hint="Choose Location:- "
-            android:inputType="none"
-            android:textColorHint="@color/black" />
-    </com.google.android.material.textfield.TextInputLayout>
-
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/signupActivityOwnerName"
-        android:layout_width="0dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/custom_editview"
-        android:drawableStart="@drawable/name_icon"
-        android:drawablePadding="15dp"
-        android:fontFamily="@font/yatraone_regular"
-        android:hint="Owner Name"
-        android:paddingStart="20dp"
-        android:paddingEnd="15dp"
-        android:singleLine="true"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityLocationView" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/signupActivityBusinessName"
-        android:layout_width="0dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/custom_editview"
-        android:drawableStart="@drawable/restaurant_icon"
-        android:drawablePadding="15dp"
-        android:fontFamily="@font/yatraone_regular"
-        android:hint="Buisness Name"
-        android:paddingStart="20dp"
-        android:paddingEnd="15dp"
-        android:singleLine="true"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityOwnerName" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/signupActivityEmail"
-        android:layout_width="0dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
+        android:id="@+id/signupActivityEmailEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         android:background="@drawable/custom_editview"
         android:drawableStart="@drawable/email_icon"
         android:drawablePadding="15dp"
         android:fontFamily="@font/yatraone_regular"
         android:hint="Email"
-        android:paddingStart="20dp"
+        android:inputType="text"
+        android:paddingStart="30dp"
+        android:paddingTop="15dp"
         android:paddingEnd="15dp"
-        android:singleLine="true"
-        android:textSize="15sp"
+        android:paddingBottom="15dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityBusinessName" />
+        app:layout_constraintTop_toBottomOf="@id/signupActivityAppLoginTitleText" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/signupActivityPasswordLayout"
-        android:layout_width="0dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/custom_editview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="40dp"
         android:paddingTop="1dp"
+        android:background="@drawable/custom_editview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signupActivityEmail">
+        app:layout_constraintTop_toBottomOf="@id/signupActivityEmailEditText">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/signupActivityPasswordEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginBottom="10dp"
             android:background="@color/white"
             android:drawableStart="@drawable/password_icon"
             android:drawablePadding="15dp"
             android:fontFamily="@font/yatraone_regular"
             android:hint="Password"
             android:inputType="textPassword"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginStart="30dp"
             android:paddingEnd="5dp"
             android:textSize="16sp"
+            android:layout_marginEnd="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <ImageView
             android:id="@+id/signupActivityShowPasswordButton"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="2dp"
+            android:layout_marginBottom="8dp"
             android:clickable="true"
             android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -188,14 +122,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/signupActivityConfirmPasswordLayout"
-        android:layout_width="0dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="40dp"
+        android:paddingTop="1dp"
         android:background="@drawable/custom_editview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/signupActivityPasswordLayout">
 
@@ -203,24 +137,23 @@
             android:id="@+id/signupActivityConfirmPasswordEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginBottom="10dp"
             android:background="@color/white"
             android:drawableStart="@drawable/password_icon"
             android:drawablePadding="15dp"
             android:fontFamily="@font/yatraone_regular"
             android:hint="Confirm Password"
             android:inputType="textPassword"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginStart="30dp"
             android:paddingEnd="5dp"
             android:textSize="16sp"
+            android:layout_marginEnd="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <ImageView
             android:id="@+id/signupActivityShowConfirmPasswordButton"
@@ -239,89 +172,103 @@
             app:srcCompat="@drawable/password_hidden_icon" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <TextView
         android:id="@+id/signupActivityContinueText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/yeonsung_regular"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:text="Or\nContinue With"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityConfirmPasswordLayout" />
-
+        app:layout_constraintTop_toBottomOf="@id/signupActivityConfirmPasswordLayout" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signupActivityGoogleButton"
-        android:layout_width="157dp"
-        android:layout_height="57dp"
-        android:layout_margin="10dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/custom_button_white"
-        android:drawableStart="@drawable/google_icon"
-        android:paddingStart="20dp"
         android:text="Google"
         android:fontFamily="@font/lato_regular"
-        android:paddingEnd="3dp"
-        android:elevation="10dp"
-        android:shadowColor="@color/accent_color"
         android:textAllCaps="false"
+        android:drawableStart="@drawable/google_icon"
+        android:paddingStart="15dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:paddingEnd="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toStartOf="@+id/signupActivityFacebookButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/signupActivityContinueText" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signupActivityFacebookButton"
-        android:layout_width="157dp"
-        android:layout_height="57dp"
-        android:layout_margin="10dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/custom_button_white"
-        android:drawableStart="@drawable/facebook_icon"
-        android:paddingStart="20dp"
         android:text="Facebook"
-        android:fontFamily="@font/lato_regular"
-        android:paddingEnd="3dp"
-        android:elevation="10dp"
-        android:shadowColor="@color/accent_color"
+        android:drawableStart="@drawable/facebook_icon"
         android:textAllCaps="false"
+        android:fontFamily="@font/lato_regular"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:paddingStart="15dp"
+        android:paddingEnd="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/signupActivityGoogleButton"
-        app:layout_constraintTop_toBottomOf="@id/signupActivityContinueText" />
+        app:layout_constraintTop_toTopOf="@id/signupActivityGoogleButton" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signupActivityCreateAccountButton"
-        android:layout_width="0dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
+        android:text="Create Account"
         android:textColor="@color/white"
         android:fontFamily="@font/lato_bold"
-        android:elevation="10dp"
-        android:shadowColor="@color/accent_color"
-        android:text="Create Account"
-        android:layout_marginStart="70dp"
-        android:layout_marginEnd="70dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="12dp"
+        android:paddingStart="60dp"
+        android:paddingEnd="60dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityFacebookButton" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signupActivityGoogleButton"/>
 
     <TextView
-        android:id="@+id/signupActivityAlreadyHaveAcountButton"
+        android:id="@+id/signupActivityAlreadyHaveAccountButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/yatraone_regular"
+        android:textColor="@color/accent_color"
+        android:text="Already have an Account>"
+        android:textSize="16sp"
         android:clickable="true"
         android:focusable="true"
-        android:fontFamily="@font/yatraone_regular"
-        android:text="Already Have an Account?"
-        android:textColor="@color/accent_color"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityCreateAccountButton" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signupActivityCreateAccountButton"/>
 
-
+    <TextView
+        android:id="@+id/signupActivityDesignedBy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/lato_bold"
+        android:textSize="20sp"
+        android:textColor="@color/accent_color"
+        android:gravity="center"
+        android:text="Designed By:-\nKrishna Agrawal"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
