--- a/adminpanel/src/main/res/layout/activity_view_menu.xml
+++ b/adminpanel/src/main/res/layout/activity_view_menu.xml
@@ -32,12 +32,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/viewMenuActivityItemList"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:foregroundGravity="center"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
