--- a/adminpanel/src/main/res/layout/view_menu_item_layout.xml
+++ b/adminpanel/src/main/res/layout/view_menu_item_layout.xml
@@ -6,30 +6,28 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="353dp"
+        android:layout_height="87dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:elevation="20dp"
         app:cardCornerRadius="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/viewMenuFoodImage"
-                android:contentDescription="Food image"
                 android:layout_width="62dp"
                 android:layout_height="62dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="15dp"
+                android:layout_marginStart="12dp"
+                android:contentDescription="Food image"
+                android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -39,11 +37,11 @@
                 android:id="@+id/viewMenuFoodName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name"
                 android:layout_marginStart="10dp"
+                android:layout_marginTop="4dp"
                 android:fontFamily="@font/lato_bold"
-                android:textSize="20sp"
-                android:layout_marginTop="-2dp"
+                android:text="Name"
+                android:textSize="22sp"
                 app:layout_constraintStart_toEndOf="@+id/viewMenuFoodImage"
                 app:layout_constraintTop_toTopOf="@+id/viewMenuFoodImage" />
 
@@ -51,73 +49,37 @@
                 android:id="@+id/viewMenuFoodRestaurantName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Restaurant Name"
+                android:layout_marginBottom="4dp"
                 android:alpha="0.7"
                 android:fontFamily="@font/lato_bold"
-                android:layout_marginTop="2dp"
-                app:layout_constraintStart_toStartOf="@+id/viewMenuFoodName"
-                app:layout_constraintTop_toBottomOf="@+id/viewMenuFoodName" />
+                android:text="Restaurant Name"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="@+id/viewMenuFoodImage"
+                app:layout_constraintStart_toStartOf="@+id/viewMenuFoodName" />
 
             <TextView
                 android:id="@+id/viewMenuFoodPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="35dp"
+                android:fontFamily="@font/lato_bold"
                 android:text="Price"
-                android:layout_marginStart="10dp"
-                android:fontFamily="@font/lato_bold"
-                android:textSize="16sp"
                 android:textColor="@color/accent_color"
-                android:layout_marginBottom="-2dp"
-                app:layout_constraintBottom_toBottomOf="@+id/viewMenuFoodImage"
-                app:layout_constraintStart_toEndOf="@+id/viewMenuFoodImage" />
-
-            <TextView
-                android:id="@+id/viewMenuFoodQuantity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/lato_bold"
-                android:text="1"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toStartOf="@+id/viewMenuIncreaseButton"
-                app:layout_constraintStart_toEndOf="@+id/viewMenuDecreaseButton"
-                app:layout_constraintTop_toTopOf="@+id/viewMenuFoodImage" />
+                android:textSize="20sp"
+                android:layout_marginTop="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
                 android:id="@+id/viewMenuDeleteButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
                 android:background="@color/white"
                 android:src="@drawable/delete_icon"
-                app:layout_constraintBottom_toBottomOf="@+id/viewMenuFoodImage"
-                app:layout_constraintEnd_toStartOf="@+id/viewMenuIncreaseButton"
-                app:layout_constraintStart_toEndOf="@+id/viewMenuDecreaseButton" />
-
-            <ImageButton
-                android:id="@+id/viewMenuDecreaseButton"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_marginEnd="90dp"
-                android:background="@drawable/custom_button_small_corners"
-                android:src="@drawable/delete_item_icon"
-                app:layout_constraintBottom_toBottomOf="@+id/viewMenuFoodQuantity"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/viewMenuFoodQuantity"
-                app:tint="@color/white" />
-
-            <ImageButton
-                android:id="@+id/viewMenuIncreaseButton"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/custom_button_small_corners"
-                android:src="@drawable/add_item_icon"
-                app:layout_constraintBottom_toBottomOf="@+id/viewMenuFoodQuantity"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/viewMenuFoodQuantity"
-                app:layout_constraintVertical_bias="0.428"
-                app:tint="@color/white" />
+                app:layout_constraintEnd_toEndOf="@+id/viewMenuFoodPrice"
+                app:layout_constraintStart_toStartOf="@+id/viewMenuFoodPrice"
+                app:layout_constraintTop_toBottomOf="@+id/viewMenuFoodPrice" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
