--- a/adminpanel/src/main/res/layout/pending_order_item_layout.xml
+++ b/adminpanel/src/main/res/layout/pending_order_item_layout.xml
@@ -8,8 +8,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:cardCornerRadius="20dp"
@@ -30,6 +30,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginStart="20dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -40,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Customer Name"
-                android:textSize="18sp"
+                android:textSize="22sp"
                 android:fontFamily="@font/yeonsung_regular"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
@@ -52,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Quantity"
-                android:textSize="14sp"
+                android:textSize="18sp"
                 android:fontFamily="@font/yeonsung_regular"
                 android:layout_marginBottom="10dp"
                 app:layout_constraintBottom_toBottomOf="@id/pendingOrderItemImage"
